# CloudBrief

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
_bmad/: config.toml  (+1 more)
backend/: .env  cookies.txt  pyproject.toml
backend/app/: celery_app.py  config.py  dependencies.py  logging_config.py  main.py  metrics.py
backend/data/: bm25_index_20260703_072857_01d20202.pkl  bm25_index_20260703_140749_df75aa49.pkl  bm25_index_20260703_143913_86ef287f.pkl  bm25_index_20260703_144041_8c1eb61a.pkl  bm25_index_20260703_152622_0248cfa7.pkl  bm25_index_20260703_152652_5ddd7858.pkl  bm25_index_20260703_152722_39005bd1.pkl  bm25_index_20260703_152821_b57776cb.pkl  bm25_index_20260703_153005_68be654d.pkl  bm25_index_20260703_153023_ee0d1ab9.pkl  bm25_index_20260703_153031_d75b99de.pkl  bm25_index_20260703_153035_09cbd8bf.pkl  bm25_index_20260703_153043_8891206a.pkl  bm25_index_20260703_153049_71d4610f.pkl  bm25_index_20260703_153050_4753898e.pkl  bm25_index_20260703_153058_bf6f146c.pkl  bm25_index_20260703_153059_dd7ac7dc.pkl  bm25_index_20260703_153111_58e5c155.pkl  bm25_index_20260704_075845_a776ff13.pkl  bm25_index_20260704_075858_7c337a64.pkl  bm25_index_20260704_075903_56585af0.pkl  bm25_index_20260704_080111_5332ff01.pkl  bm25_index_20260704_081023_79dba290.pkl  bm25_index_20260704_081034_b9f915a0.pkl  bm25_index_20260704_081045_abe2e89b.pkl  bm25_index_20260704_081055_035f6b87.pkl  bm25_index_20260705_072223_de49d0c3.pkl  bm25_index_20260705_080808_e9b71af1.pkl  bm25_index_20260705_143130_97e8ef13.pkl  (+33 more)
(+256 files in other folders)
