[project]
name = "cloudbrief-copilot"
version = "0.1.0"
description = "CloudBrief 支持副驾 — Enterprise RAG 内部知识问答系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pymilvus>=2.3.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "python-frontmatter>=1.1.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "ragas>=0.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "llama-index>=0.10.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "tenacity>=9.1.4",
    "bcrypt>=4.1.0,<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.32",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
graphrag = [
    "neo4j>=5.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
